CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
   
PROJECT(illion)
SET(${PROJECT_NAME}_MAJOR_VERSION 0)
SET(${PROJECT_NAME}_MINOR_VERSION 1)
SET(${PROJECT_NAME}_PATCH_LEVEL 0)

SET(CMAKE_BUILD_TYPE None) # None, Debug, Release
SET(CMAKE_C_FLAGS "-Wall -O3")
SET(CMAKE_CXX_FLAGS "-Wall -O3 -std=c++11")

#OPTION(ENABLE_64BIT "Set to OFF to build 64-bit version" ON)
#IF (ENABLE_64BIT)
  ADD_DEFINITIONS(-DB_64)
#ENDIF (ENABLE_64BIT)

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
FIND_PACKAGE(GMP)
IF (GMP_FOUND)
  ADD_DEFINITIONS(-DHAVE_LIBGMP -DHAVE_LIBGMPXX)
  INCLUDE_DIRECTORIES(${GMP_INCLUDE_DIR})
  LINK_LIBRARIES(${GMP_LIBRARIES} ${GMPXX_LIBRARIES})
ENDIF (GMP_FOUND)
   
ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(test)

MESSAGE(WARNING "To link with Python, just run setup.py without using cmake.")
