MESSAGE(WARNING "To link with Python, just run setup.py without using cmake.")

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
   
PROJECT(graphillion)
SET(${PROJECT_NAME}_MAJOR_VERSION 0)
SET(${PROJECT_NAME}_MINOR_VERSION 1)
SET(${PROJECT_NAME}_PATCH_LEVEL 0)

SET(CMAKE_BUILD_TYPE None) # None, Debug, Release
SET(CMAKE_C_FLAGS "-Wall -O3")
SET(CMAKE_CXX_FLAGS "-Wall -O3")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
FIND_PACKAGE(GMP)
IF (GMP_FOUND)
  ADD_DEFINITIONS(-DHAVE_LIBGMP -DHAVE_LIBGMPXX)
  INCLUDE_DIRECTORIES(${GMP_INCLUDE_DIR})
  LINK_LIBRARIES(${GMP_LIBRARIES} ${GMPXX_LIBRARIES})
ENDIF (GMP_FOUND)
   
ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
