MESSAGE(WARNING "To link with Python, just run setup.py without using cmake.")

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
   
PROJECT(graphillion)
SET(${PROJECT_NAME}_MAJOR_VERSION 0)
SET(${PROJECT_NAME}_MINOR_VERSION 1)
SET(${PROJECT_NAME}_PATCH_LEVEL 0)

SET(CMAKE_BUILD_TYPE None) # None, Debug, Release
SET(CMAKE_C_FLAGS "-Wall -O3 -g")
SET(CMAKE_CXX_FLAGS "-Wall -O3 -g")

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/src)

ADD_DEFINITIONS(-DB_64)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/cmake/Modules/")
   
ENABLE_TESTING()

ADD_SUBDIRECTORY(src)
